--- a/react-frontend/src/pages/Eventos.css
+++ b/react-frontend/src/pages/Eventos.css
@@ -474,3 +474,11 @@ main {
         max-height: 200px;
     }
 }
+
+.modal-detalhado .tempo-restante-evento {
+  font-size: 1rem;
+  color: #000000; 
+  font-weight: 500;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+}
