--- a/react-frontend/src/components/NavBar.css
+++ b/react-frontend/src/components/NavBar.css
@@ -15,7 +15,7 @@
 }
 
 .logo-image {
-  max-height: 100%;
+  max-height: 80%;
   transform: scale(1.6);
   transform-origin: left center;
   object-fit: contain;
@@ -36,7 +36,8 @@
 }
 
 .navbar a {
-  color: #000;
+  
+  color:#2E7D32;
   text-decoration: none;
   font-weight: bold;
 }
