--- a/react-frontend/src/pages/Feed.css
+++ b/react-frontend/src/pages/Feed.css
@@ -135,7 +135,9 @@
   animation: spin 1s linear infinite;
 }
 .top-search-bar {
-  margin-top: 30px;
+  margin-top: 100px; /* ou padding-top se preferir */
+  position: relative;
+  z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center; /* IMPORTANTE: mantém os ícones centralizados verticalmente */
