magin top em eventos e faq

--- a/react-frontend/src/pages/Eventos.css
+++ b/react-frontend/src/pages/Eventos.css
@@ -15,6 +15,7 @@ main {
 
 /* Barra Superior e Pesquisa (do CODIGO 1) */
 .top-bar-eventos { /* Mantido do codigo1, mas o input pode usar a estilização do codigo2 que é igual */
+  margin-top: 84px;
   display: flex;
   justify-content: space-between;
   align-items: center;
